@@ -1,9 +1,9 @@
 package gregtech.api.gui.modularui;
 
+import static gregtech.api.enums.Mods.GTPlusPlus;
 import static gregtech.api.enums.Mods.GregTech;
 
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.gtnewhorizons.modularui.api.drawable.AdaptableUITexture;
@@ -43,6 +43,7 @@ public class GTUITextures {
     public static final UITexture OVERLAY_SLOT_BEAKER_2 = UITexture.fullImage(GregTech.ID, "gui/overlay_slot/beaker_2");
     public static final UITexture OVERLAY_SLOT_BEE_DRONE = UITexture.fullImage(GregTech.ID, "gui/overlay_slot/bee_drone");
     public static final UITexture OVERLAY_SLOT_BEE_QUEEN = UITexture.fullImage(GregTech.ID, "gui/overlay_slot/bee_queen");
+    public static final UITexture OVERLAY_SLOT_UPGRADE = UITexture.fullImage(GregTech.ID, "gui/overlay_slot/slot_upgrade");
     public static final UITexture OVERLAY_SLOT_BENDER = UITexture.fullImage(GregTech.ID, "gui/overlay_slot/bender");
     public static final UITexture OVERLAY_SLOT_BOX = UITexture.fullImage(GregTech.ID, "gui/overlay_slot/box");
     public static final UITexture OVERLAY_SLOT_BOXED = UITexture.fullImage(GregTech.ID, "gui/overlay_slot/boxed");
@@ -110,7 +111,7 @@ public class GTUITextures {
 
     public static final UITexture[] OVERLAY_SLOTS_NUMBER = IntStream.range(0, 12)
         .mapToObj(i -> UITexture.fullImage(GregTech.ID, "gui/overlay_slot/number_" + i))
-        .collect(Collectors.toList())
+        .toList()
         .toArray(new UITexture[0]);
 
     // spotless:off
@@ -168,6 +169,7 @@ public class GTUITextures {
     public static final UITexture PROGRESSBAR_LHC_W = UITexture.fullImage(GregTech.ID, "gui/progressbar/lhc_weak");
     public static final UITexture PROGRESSBAR_LHC_S = UITexture.fullImage(GregTech.ID, "gui/progressbar/lhc_strong");
     public static final UITexture PROGRESSBAR_LHC_G = UITexture.fullImage(GregTech.ID, "gui/progressbar/lhc_gravity");
+    public static final UITexture PROGRESSBAR_FLUID_REACTOR = UITexture.fullImage(GTPlusPlus.ID, "gui/progressbar/fluid_reactor");
 
     public static final UITexture TAB_COVER_NORMAL = UITexture.fullImage(GregTech.ID, "gui/tab/cover_normal");
     public static final UITexture TAB_COVER_HIGHLIGHT = UITexture.fullImage(GregTech.ID, "gui/tab/cover_highlight");
